[project]
name = "remote-printer-api"
version = "0.1.0"
description = "An API for printing labels on remote printers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
