[project]
name = "remote-printer-api"
version = "0.1.0"
description = "An API for printing labels on remote printers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.1",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
